<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="10dp"
    android:layout_margin="8dp"
    android:background="@drawable/round_corners">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="130dp"
        android:orientation="vertical"
        app:cardCornerRadius="10dp"
        tools:ignore="MissingConstraints">

        <RelativeLayout
            android:id="@+id/linear_layout1"
            android:layout_width="match_parent"
            android:layout_height="130dp"
            android:background="#B3E5FC"
            android:orientation="vertical">

            <TextView
                android:id="@+id/name_place_tn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="10dp"
                android:layout_marginTop="5dp"
                android:text="@string/tamil_nadu"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold" />


            <TextView
                android:id="@+id/date_case_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="30dp"
                android:layout_marginTop="5dp"
                android:layout_toEndOf="@+id/name_place_tn"
                android:text="@string/_10th_aug"
                android:textColor="@color/black"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/case1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="5dp"
                android:layout_toEndOf="@+id/date_case_1"
                android:text="@string/cases"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/count_case_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="2dp"
                android:layout_marginTop="8dp"
                android:layout_toEndOf="@+id/case1"
                android:text="@string/_1000"
                android:textColor="#FF018786"
                android:textSize="16sp" />


            <TextView
                android:id="@+id/name_place_up"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="50dp"
                android:text="@string/uttar_pradesh"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold" />


            <TextView
                android:id="@+id/date_case2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="12dp"
                android:layout_marginTop="50dp"
                android:layout_toEndOf="@+id/name_place_up"
                android:text="@string/_11th_aug"
                android:textColor="@color/black"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/case2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="50dp"
                android:layout_toEndOf="@+id/date_case2"
                android:text="@string/cases"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/count_case2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="2dp"
                android:layout_marginTop="51dp"
                android:layout_toEndOf="@+id/case2"
                android:text="@string/_2000"
                android:textColor="#FF018786"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/name_place_wb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="90dp"
                android:text="@string/west_bengal"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold" />


            <TextView
                android:id="@+id/date_case3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="12dp"
                android:layout_marginTop="90dp"
                android:layout_toEndOf="@+id/name_place_up"
                android:text="@string/_12th_aug"
                android:textColor="@color/black"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/case3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginTop="90dp"
                android:layout_toEndOf="@+id/date_case2"
                android:text="@string/cases"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/count_case3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="2dp"
                android:layout_marginTop="91dp"
                android:layout_toEndOf="@+id/case2"
                android:text="@string/_3000"
                android:textColor="#FF018786"
                android:textSize="16sp" />
        </RelativeLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>